# cstring_wrapper

./: CMakeLists.txt  README.md
include/cstring/: cstring_wrapper.hpp
test/: main.cpp
